--- a/package.json
+++ b/package.json
@@ -6,14 +6,21 @@
   "main": "mcp-server.js",
   "scripts": {
     "client": "node mcp-client.js",
+    "cli": "node cli.js",
     "start": "node mcp-server.js",
     "prepare": "npm run build",
     "build": "echo \"No build step required\"",
     "prepublishOnly": "npm test",
     "test": "echo \"No tests specified yet\""
   },
+  "bin": {
+    "frogiverse": "./cli.js"
+  },
   "files": [
+    "cli.js",
+    "message-sync-service.js",
     "mcp-server.js",
+    "store-lock.js",
     "telegram-client.js",
     "LIBRARY.md",
     "README.md",
