chore(cli): add install script and refresh README

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mcp-server.js",
     "store-lock.js",
     "telegram-client.js",
+    "scripts/install-cli.sh",
     "LIBRARY.md",
     "README.md",
     "LICENSE"
