--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
     "@modelcontextprotocol/sdk": "^1.25.2",
     "@mtcute/core": "^0.27.6",
     "@mtcute/node": "^0.27.6",
-    "better-sqlite3": "^12.6.0",
-    "dotenv": "^17.2.3"
+    "better-sqlite3": "^12.6.0"
   }
 }
