--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@modelcontextprotocol/sdk": "^1.25.2",
     "@mtcute/core": "^0.27.8",
     "@mtcute/node": "^0.27.8",
-    "better-sqlite3": "^12.6.0"
+    "better-sqlite3": "^12.6.0",
+    "commander": "^12.1.0"
   }
 }
