--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,27 +26,35 @@ jobs:
   update-brew:
     needs: publish-npm
     runs-on: ubuntu-latest
-    if: ${{ secrets.HOMEBREW_TAP_TOKEN != '' }}
     permissions:
       contents: read
+    env:
+      HOMEBREW_TAP_TOKEN: ${{ secrets.HOMEBREW_TAP_TOKEN }}
     steps:
+      - name: Skip if no Homebrew token
+        if: env.HOMEBREW_TAP_TOKEN == ''
+        run: echo "HOMEBREW_TAP_TOKEN not set; skipping brew update."
       - name: Resolve version
+        if: env.HOMEBREW_TAP_TOKEN != ''
         run: |
           TAG="${GITHUB_REF_NAME}"
           VERSION="${TAG#v}"
           echo "VERSION=$VERSION" >> "$GITHUB_ENV"
       - name: Download npm tarball
+        if: env.HOMEBREW_TAP_TOKEN != ''
         run: |
           TARBALL_URL="https://registry.npmjs.org/@kfastov/tgcli/-/tgcli-${VERSION}.tgz"
           curl -fsSL "$TARBALL_URL" -o tgcli.tgz
           echo "TARBALL_URL=$TARBALL_URL" >> "$GITHUB_ENV"
           echo "SHA256=$(sha256sum tgcli.tgz | awk '{print $1}')" >> "$GITHUB_ENV"
       - uses: actions/checkout@v4
+        if: env.HOMEBREW_TAP_TOKEN != ''
         with:
           repository: kfastov/homebrew-tap
           token: ${{ secrets.HOMEBREW_TAP_TOKEN }}
           path: homebrew-tap
       - name: Update formula
+        if: env.HOMEBREW_TAP_TOKEN != ''
         env:
           FORMULA_PATH: homebrew-tap/Formula/tgcli.rb
         run: |
@@ -65,6 +73,7 @@ jobs:
           path.write_text(text)
           PY
       - name: Commit and push
+        if: env.HOMEBREW_TAP_TOKEN != ''
         run: |
           cd homebrew-tap
           git config user.name "github-actions[bot]"
